<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="35dp"
                android:paddingEnd="15dp">

    <TextView
        android:id="@+id/text_plus_or_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:minWidth="20dp"
        android:text="@string/plus"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_group_overcost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_toEndOf="@+id/text_plus_or_minus"
        android:gravity="end"
        android:minWidth="60dp"
        android:text="@string/default_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_group_money_symbol1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/text_group_overcost"
        android:text="@string/default_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/textView1"
        android:text="@string/open_parentesis"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="2dp"
        android:layout_toStartOf="@+id/text_group_total_paid"
        android:text="@string/result_total_paid"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/text_group_total_paid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:layout_toStartOf="@+id/text_group_money_symbol2"
        android:gravity="end"
        android:minWidth="25dp"
        android:text="@string/default_text"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/text_group_money_symbol2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_toStartOf="@+id/TextView02"
        android:text="@string/default_text"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="@string/close_parentesis"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

</RelativeLayout>