<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_ticket_white" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_ticket_white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal">

                        <TextView
                            android:id="@+id/cheque1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal">

                        <TextView
                            android:id="@+id/cheque2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </RelativeLayout>
                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/labelPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header"
                android:layout_centerHorizontal="true"
                android:text="@string/insert_price"
                android:textColor="@color/textColorAccent"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/costLayout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/labelPrice"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/cost"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/calculate"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:gravity="end"
                    android:hint="@string/coin"
                    android:inputType="numberDecimal"
                    android:textSize="49sp"
                    android:textStyle="bold">

                    <requestFocus />
                </EditText>

                <Button
                    android:id="@+id/calculate"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/cost"
                    android:textAlignment="center"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:icon="@drawable/baseline_calculate_24"
                    app:iconSize="96dp"
                    app:iconTint="@color/colorAccent" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/personsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/costLayout"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/persons_a"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/peopleAmount"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:hint="1"
                    android:inputType="number"
                    android:maxLength="999" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/persons_b"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/personsLayout"
                android:layout_marginTop="45dp"
                android:text="@string/explanation"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>